# Jogo_TecProg_2024

./: .gitignore  CMakeLists.txt  Jogo_2024.mdj  Jogo_TecProg_2024.sln  README.md  diagramaJogo.mdj
Diagramas/: diagramaJogo.mdj  diagramaJogo_2.0.mdj
Jogo_TecProg_2024/: Botao.cpp  Botao.h  CMakeCache.txt  CMakeLists.txt  Capitao.cpp  Capitao.h  Ente.cpp  Ente.h  Entidade.cpp  Entidade.h  Fase.cpp  Fase.h  Fase_1.cpp  Fase_1.h  Fase_2.cpp  Fase_2.h  Gerenciador_Colisoes.cpp  Gerenciador_Colisoes.h  Gerenciador_Grafico.cpp  Gerenciador_Grafico.h  Inimigo.cpp  Inimigo.h  Inimigo_Esmagador.cpp  Inimigo_Esmagador.h  Inimigo_Facil.h  Inimigo_Medio.cpp  Inimigo_Medio.h  Inimigo_Pirata.cpp  Inimigo_Pirata.h  Jogador.cpp  Jogador.h  Jogo.cpp  Jogo.h  Jogo_TecProg_2024.cpp  Jogo_TecProg_2024.vcxproj  Jogo_TecProg_2024.vcxproj.filters  Leiame.txt  Lista.h  Lista_Entidades.cpp  Lista_Entidades.h  (+25 more)
Jogo_TecProg_2024/Include/Core/: Jogo.h  Menu.h
Jogo_TecProg_2024/Include/Entidades/: Ente.h  Entidade.h  Projetil.h
Jogo_TecProg_2024/Include/Entidades/Obstaculos/: Espinhos.h  Esteira.h  Obstaculo.h  Obstaculo_Dificil.h  Obstaculo_Esteira.h  Obstaculo_Facil.h  Plataforma.h
Jogo_TecProg_2024/Include/Entidades/Personagens/: Jogador.h  Personagem.h
Jogo_TecProg_2024/Include/Entidades/Personagens/Inimigos/: Capitao.h  Esmagador.h  Inimigo.h  Inimigo_Esmagador.h  Inimigo_Facil.h  Inimigo_Pirata.h  Pirata.h
Jogo_TecProg_2024/Include/Fases/: Fase.h  Fase_1.h  Fase_2.h
Jogo_TecProg_2024/Include/Gerenciadores/: Gerenciador_Colisoes.h
Jogo_TecProg_2024/Include/Listas/: Lista.h  Lista_Entidades.h
Jogo_TecProg_2024/Sorce/Core/: Jogo.cpp  Jogo_TecProg_2024.cpp  Menu.cpp
Jogo_TecProg_2024/Sorce/Entidades/: Entidade.cpp
Jogo_TecProg_2024/Sorce/Entidades/Obstaculos/: Obstaculo_Dificil.cpp  Obstaculo_Esteira.cpp  Obstaculo_Facil.cpp
Jogo_TecProg_2024/Sorce/Entidades/Personagens/: Jogador.cpp  Personagem.cpp
Jogo_TecProg_2024/Sorce/Entidades/Personagens/Inimigos/: Inimigo.cpp
Jogo_TecProg_2024/Sorce/Fases/: Fase.cpp  Fase_1.cpp  Fase_2.cpp
Jogo_TecProg_2024/Sorce/Gerenciadores/: Gerenciador_Colisoes.cpp
Jogo_TecProg_2024/Source/Core/: Jogo.cpp  Menu.cpp
Jogo_TecProg_2024/Source/Entidades/: Ente.cpp  Entidade.cpp  Projetil.cpp
Jogo_TecProg_2024/Source/Entidades/Obstaculos/: Espinhos.cpp  Esteira.cpp  Obstaculo.cpp  Obstaculo_Dificil.cpp  Obstaculo_Esteira.cpp  Plataforma.cpp
Jogo_TecProg_2024/Source/Entidades/Personagens/: Jogador.cpp  Personagem.cpp
Jogo_TecProg_2024/Source/Entidades/Personagens/Inimigos/: Capitao.cpp  Esmagador.cpp  Inimigo.cpp  Inimigo_Esmagador.cpp  Inimigo_Facil.cpp  Inimigo_Pirata.cpp  Pirata.cpp
Jogo_TecProg_2024/Source/Fases/: Fase.cpp  Fase_1.cpp  Fase_2.cpp
Jogo_TecProg_2024/Source/Gerenciadores/: Gerenciador_Colisoes.cpp  Gerenciador_Grafico.cpp
Jogo_TecProg_2024/Source/Listas/: Lista_Entidades.cpp
Jogo_TecProg_2024/include/: Capitao.h  Ente.h  Entidade.h  Fase.h  Fase_1.h  Gerenciador_Colisoes.h  Gerenciador_Grafico.h  Inimigo.h  Inimigo_Facil.h  Inimigo_Medio.h  Jogador.h  Jogador1.h  Jogo.h  Lista.h  Lista_Entidades.h  Menu.h  Obstaculo.h  Obstaculo_Dificil.h  Obstaculo_Medio.h  Personagem.h  Piso.h  Projetil.h  TorreFogo.h
Jogo_TecProg_2024/src/: Capitao.cpp  Ente.cpp  Entidade.cpp  Fase.cpp  Fase_1.cpp  Gerenciador_Colisoes.cpp  Gerenciador_Grafico.cpp  Inimigo.cpp  Inimigo_Facil.cpp  Inimigo_Medio.cpp  Jogador.cpp  Jogador1.cpp  Jogo.cpp  Lista_Entidades.cpp  Menu.cpp  Obstaculo.cpp  Obstaculo_Dificil.cpp  Obstaculo_Facil.cpp  Obstaculo_Medio.cpp  Personagem.cpp  Piso.cpp  Projetil.cpp  TorreFogo.cpp
